...

    var body: some View {
        WithViewStore(store, observe: { $0 }, content: { viewStore in
            ZStack {
                ScrollView {
                    VStack {
                        NotifyEndTimeView(
                            completionDate: viewStore.completionDate,
                            appearAnimation: $appearAnimation
                        )
                        .accessibilityElement(children: .contain)
                        .accessibilityIdentifier(
                            SCAccessibilityIdentifiers.TimerCompletionView.notifyEndTimeSection.rawValue
...
                        .accessibilityIdentifier(
                            SCAccessibilityIdentifiers.TimerCompletionView.closeTimeCompletionViewButton.rawValue
                        )

                        Spacer(minLength: 18)

                        TimerSummaryView(
                            startDate: viewStore.startDate,
                            timerDurationMinutes: viewStore.timerDurationMinutes,
                            appearAnimation: $appearAnimation
                        )
                        .accessibilityElement(children: .contain)
                        .accessibilityIdentifier(
...
