...
                    .controlSize(.large)
                    .padding(.horizontal)
                    .padding(.vertical, 10)
                }
                .padding(.top, 10)
            }
            .navigationTitle("Silent Cue")
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button {
                        viewStore.send(.settingsButtonTapped)
                    } label: {
                        Image(systemName: "gearshape.fill")
                            .foregroundStyle(.blue)
                    }
                    .buttonStyle(.plain)
                }
            }
        }
...
